--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
                 </label> <br>
                 <label class="mb-3 text-success">
                 Ixtiyoriy son kiriting:
-                    <input id="number" type="number" aria-label="First name" class="form-control w-5">
+                    <input id="number" placeholder=" sonlar 1dan 10 gacha" type="number" aria-label="First name" class="form-control w-5">
                 </label><br>
                 
                 <button id="" type="submit" class="btn btn-primary w-100 ">Confirm identity</button>
